WebKit::setCrashReportApplicationSpecificInformation() should also log to WTFLogAlways() <https://webkit.org/b/214756>

Reviewed by Chris Dumez.

* Platform/cocoa/WKCrashReporter.mm:
(WebKit::setCrashReportApplicationSpecificInformation):
- Also output the log information via WTFLogAlways() in case
  Application Specific Information is overwritten or is not
  included in the crash log.


Canonical link: https://commits.webkit.org/227582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264858 268f45cc-cd09-0410-ab3c-d52691b4dbfc